# installed

./: .gitattributes
AutoHotkey/: WindowSpy.ahk
AutoHotkey/UX/: WindowSpy.ahk  install-ahk2exe.ahk  install-version.ahk  install.ahk  installed-files.csv  launcher.ahk  reload-v1.ahk  ui-dash.ahk  ui-editor.ahk  ui-launcherconfig.ahk  ui-newscript.ahk  ui-setup.ahk  ui-uninstall.ahk
AutoHotkey/v1.1.37.02/: AutoHotkey.chm
BCUninstaller/: BCUninstaller.settings  InfoCache.xml  NOTICE
BCUninstaller/Resources/: MicrosoftProgram_Install_and_Uninstall.meta.diagcab
Chrome/: Dockerfile  [New_Box] Google Keep.lnk
Chrome/Application/: chrome.VisualElementsManifest.xml  initial_preferences
Drivers/DriverEasy/: DriverEasy.exe.config  unins000.msg
Drivers/DriverMax/: 9579562.txt  DriverMaxXML.xml  drivermax.ARE.lng  drivermax.CA.lng  drivermax.DEU.lng  drivermax.ELL.lng  drivermax.ESN.lng  drivermax.EUQ.lng  drivermax.FIN.lng  drivermax.FRA.lng  (+13 more)
ExplorerTabUtility/: LICENSE
FreeFileSync/: Changelog.txt  License.rtf
Greenshot/: Greenshot.exe.config  Greenshot.ini  checksum.MD5  readme.txt  unins000.msg
LockHunter/: History.txt  LockHunter.url  USRFindHandle64.sys  eula.rtf
MacroRecorder/: extp.etl  unins000.msg
Process Lasso/: LICENSES  pl-update.cmd  pl.cmd  start-governor.bat  stop-governor.bat
Reflect/: License.rtf  Mrcbt.sys  RMBuilder.exe.BAK  ReflectBin.exe.BAK  ReflectUpdater.exe.BAK  SyntaxEdit_dark.ini  SyntaxEdit_light.ini  _bat.schclass  _bat_dark.schclass  _ps1.schclass  _ps1_dark.schclass  _vbs.schclass  _vbs_dark.schclass  _xml.schclass  _xml_dark.schclass  mrigflt.sys
VSCode/: resources.pak  unins000.msg
adw/: adwcleaner.lnk
everything/: Everything.ini  Everything.lng  Everything.lnk
firefox/: application.ini  installation_telemetry.json  platform.ini  postSigningData
gamesavemanager/: Known Issues.txt  commandline_help.bat  debug_mode.bat  gs_mngr_3.cdd  gs_mngr_3.exe - Shortcut.lnk
macrocreator/: MacroCreator - Shortcut.lnk  MacroCreator_Help.chm
myapps/compiled_python/myg/bb/C++/: CMakeLists.txt  build.bat  build_qmake.sh  run_app.py  run_cpp_demo.py
myapps/compiled_python/myg/bb/C++/include/: login_dialog.h  ui_components.h  utils.h  workers.h
myapps/compiled_python/myg/bb/C++/src/: docker_app.cpp  main.cpp  session.cpp  tab_manager.cpp  utils.cpp  workers.cpp
nircmd/: NirCmd.chm  UnMute.lnk  nircmdMute.lnk
nvidiaprofileinspector/: default.nip  nvidiaProfileInspector.lnk  performace.nip
openspeedy/: OpenSpeedy.exe.lnk  bridge32.exe.lnk  bridge64.exe.lnk  config.ini  speedpatch32.dll.lnk  speedpatch64.dll.lnk
parsec/: README.txt  appdata.json  config.json  hotkey.json  log.txt  log_cl.txt  metrics_client.json  parsecd - Shortcut.lnk  window.json
pstools/: Dockerfile  Pstools.chm
quickstartup60117/: app-info.txt
shexview/: shexview.chm
todoist/: Todoist.lnk
ventoy-1.1.05/: log.txt
(+1224 files in other folders)
